# mnist-rust

./: Cargo.toml
src/: lib.rs  main.rs  process_csv.rs  utils.rs
