[package]
name = "mnist-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
bincode = "1.3.3"

[[bin]]
name = "process_csv"
path = "src/process_csv.rs"
